Implement updating account information
